# jabra-admin-portal-csr

./: Cargo.toml  Dockerfile  index.html  input.css  jabra-admin-portal-csr-6f1f9204fa58e75f.js  jabra-admin-portal-csr-a28b59730fd5574e.js  modal.css  output-f652a7eb8de85cb9.css  package-lock.json  tailwind.config.js
.github/workflows/: gh-pages-deploy.yml
src/: features.rs  lib.rs  main.rs
src/commons/models/: coinbase.rs  counterparty.rs  currency.rs  currency_pair.rs  defaults.rs  interestrates.rs  loan.rs  login.rs  mod.rs  quote.rs  trade.rs  wallet.rs
src/commons/services/: coinbase.rs  counterparty.rs  currency.rs  interestrates.rs  mod.rs  quote.rs
src/components/: arrow_down.rs  arrow_up.rs  component_size.rs  component_type.rs  confirm_all_quotes_modal.rs  confirm_batch_quotes_modal.rs  confirm_modal.rs  data_table_header.rs  data_table_local.rs  default_none.rs  download_anchor.rs  error_modal.rs  icons.rs  loading_button.rs  loading_spinners.rs  menu_button.rs  mod.rs  not_found.rs  please_login.rs  select.rs  side_nav_menu.rs  sidebar.rs  success_modal.rs  success_modal_redirect.rs  success_refetch_modal.rs  success_then_refetch_modal.rs
src/features/: counterparties.rs  quotes.rs  trades.rs
src/features/counterparties/: account_overview.rs  loans.rs  models.rs  page.rs  positions.rs  quotes.rs  services.rs  trade_history.rs  transfers.rs
src/features/dashboard/: page.rs
src/utilities/: configuration.rs  cookies.rs  date_util.rs  errors.rs  http_wrapper.rs  local.rs  mod.rs  number_util.rs  string_util.rs
style/: output.css
(+23 files in other folders)
