[package]
name = "admin-portal-csr"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.11.23", features = ["json"] }
serde_urlencoded = "0.7.1"
http = "1"
gloo-net = "0.5.0"
reqwasm = { version = "0.5.0", features = ["http", "json"] }
wasm-cookies = "0.2.1"
leptos-use = "0.10.5"
chrono = "0.4.31"
magic-crypt = "3.1.12"
currency_rs = "1.3.0"
num-format = "0.4.4"
rust_decimal = "1.32.0"
h_modals = "0.2.2"
base64 = "0.21.4"
uuid = {version = "1.4.1", features = ["v4"]}
gloo-timers = { version = "0.3.0", features = ["futures"] }
web-sys = { version = "0.3.64", features = ["AbortController", "AbortSignal", "HtmlDocument", "WebSocket", "Blob", "BlobPropertyBag"]}

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
